--- a/contactos.css
+++ b/contactos.css
@@ -1,4 +1,8 @@
 .grid-container{
-    
-
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    padding: 50px 20px;
+    flex-wrap: wrap;
+    background-color: #fff;
  }
