--- a/contactos.css
+++ b/contactos.css
@@ -8,6 +8,22 @@
  }
  .contacto {
     text-align: center;
-  padding: 20px;
-  max-width: 250px;
+    padding: 20px;
+     max-width: 250px;
 }
+.contacto h3 {
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+{ }
