Finalizando diseño en la clase Contacto para la etiqueta a

--- a/contactos.css
+++ b/contactos.css
@@ -4,7 +4,7 @@
     gap: 40px;
     padding: 50px 20px;
     flex-wrap: wrap;
-    background-color: #fff;
+    background-color: black
  }
  .contacto {
     text-align: center;
@@ -16,12 +16,16 @@
   margin-bottom: 15px;
   font-weight: bold;
 }
-.card img {
+.contacto img {
     display: block;
     margin: 0 auto 15px;
     max-width: 80px;
   }
-  
+  .contacto a {
+    color: rgb(255, 0, 0);
+    text-decoration: none;
+    font-weight: bold;
+  }
 
 
 
@@ -34,4 +38,3 @@
 
 
 
-{ }
