--- a/contactos.css
+++ b/contactos.css
@@ -4,7 +4,7 @@
     gap: 40px;
     padding: 50px 20px;
     flex-wrap: wrap;
-    background-color: black
+    background-color: rgb(102, 31, 31)
  }
  .contacto {
     text-align: center;
@@ -27,7 +27,7 @@
     font-weight: bold;
   }
   .contacto a:hover {
-    
+    text-decoration: underline;
   }
 
 
