--- a/contactos.css
+++ b/contactos.css
@@ -33,7 +33,12 @@
     width: 100%;
     margin-top: 20px;
   }
-  
+  .mapa iframe {
+    display: block;
+    width: 100%;
+    height: 400px;
+    border: none;
+  }
 
 
 
