--- a/contactos.css
+++ b/contactos.css
@@ -40,9 +40,21 @@
     border: none;
   }
   footer {
-   
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    font-size: 14px;
   }
-  
+  footer a {
+    color: red
+    text-decoration: none;
+    font-weight: bold;
+  }
+  footer a:hover {
+    text-decoration: underline;
+  }
+
 
 
 
