Modificando colores del css de html contactos

--- a/contactos.css
+++ b/contactos.css
@@ -12,7 +12,7 @@
      max-width: 250px;
 }
 .contacto h3 {
-    color: #333;
+    color: #c0464669;
   margin-bottom: 15px;
   font-weight: bold;
 }
