--- a/serviciosstyle.css
+++ b/serviciosstyle.css
@@ -15,4 +15,7 @@ header{
   display: flex;
    justify-content: space-between;
   align-items: center;
+   background: #7a0000;
+  padding: 0px 20px;
+  color: white;
 }
