--- a/serviciosstyle.css
+++ b/serviciosstyle.css
@@ -39,3 +39,12 @@ header .galeria\logo.png {
   background: #f7f4f4;
   color: #7a0000;
 }
+main > h1 {
+  margin-top: 40px;
+  text-align: center;
+  font-size: 3.5rem;
+  color: black;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-style: italic;
+  font-weight: 100;
+}
