Centrando el texto

--- a/serviciosstyle.css
+++ b/serviciosstyle.css
@@ -48,3 +48,10 @@ main > h1 {
   font-style: italic;
   font-weight: 100;
 }
+main > p {
+  text-align: center;
+  margin: 15px 0 40px;
+  font-size: 1.2rem;
+  font-family:sans-serif;
+  color: #000000;
+}
