--- a/serviciosstyle.css
+++ b/serviciosstyle.css
@@ -63,3 +63,9 @@ section {
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 }
+section h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  color: black;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
