--- a/productos.css
+++ b/productos.css
@@ -5,5 +5,8 @@
 }
 
 body{
-    
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.6;
+    color: black;
+    background: #f4f4f4;
 }
