--- a/productos.css
+++ b/productos.css
@@ -10,3 +10,11 @@ body{
     color: black;
     background: #f4f4f4;
 }
+
+#encabezado {
+    position: sticky;
+    top: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
