--- a/productos.css
+++ b/productos.css
@@ -17,4 +17,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background: #7a0000;
+    padding: 8px 20px;
+    color: white;
 }
