Definiendo posicion y tamaño de lista de nav en el encabezado

--- a/productos.css
+++ b/productos.css
@@ -30,3 +30,10 @@ body{
     display: block;
     object-fit: contain;
 }
+
+#navegación #lista{
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
