--- a/productos.css
+++ b/productos.css
@@ -56,5 +56,9 @@ body{
 h1 {
   margin-top: 28px;
   text-align: center;
-  
+  font-size: 3rem;
+  color: black;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-style: italic;
+  font-weight: 100;
 }
