--- a/productos.css
+++ b/productos.css
@@ -62,3 +62,11 @@ h1 {
   font-style: italic;
   font-weight: 100;
 }
+
+#main > h2 {
+  margin: 18px 0 8px;
+  text-align: center;
+  font-size: 1.4rem;
+  color: black;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
