Activando grid para etiqueta div en main

--- a/productos.css
+++ b/productos.css
@@ -79,3 +79,10 @@ section, main > .turbos {
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.08);
 }
+
+.galeria {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3 columnas repeat(auto-fit, minmax(240px, 1fr));*/
+  gap: 16px;
+  padding: 10px;
+}
