Activando flex para article en main

--- a/productos.css
+++ b/productos.css
@@ -86,3 +86,9 @@ section, main > .turbos {
   gap: 16px;
   padding: 10px;
 }
+
+article.taller {
+  display: flex;
+  flex-direction: column;
+  
+}
