Asignando bordes a las imagenes de galeria

--- a/productos.css
+++ b/productos.css
@@ -101,5 +101,7 @@ article.taller {
 article.taller img {
   width: 100%;
   height: auto;
-  
+  border-radius: 6px;
+  object-fit: cover;
+  display: block;
 }
