Agregando estilos a la clase .tres

--- a/productos.css
+++ b/productos.css
@@ -125,5 +125,7 @@ article.taller p {
 }
 
 .tres {
-  
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 16px;
 }
