Creando clase .animacion-turbo1 vacía como base

--- a/productos.css
+++ b/productos.css
@@ -155,3 +155,7 @@ article.taller p {
     align-items: center;
     flex-wrap: wrap; /* Se adapta si la pantalla es pequeña */
 }
+
+.animacion-turbo1 {
+  
+}
