Creando clase .animacion-turbo2 vacía como base

--- a/productos.css
+++ b/productos.css
@@ -172,3 +172,7 @@ article.taller p {
     80%  { background-image: url('imagenesturbo/1TurbocompresorGarrett/turbo5-removebg-preview.png'); }
     100% { background-image: url('imagenesturbo/1TurbocompresorGarrett/turbo1-removebg-preview.png'); }
 }
+
+.animacion-turbo2 {
+   
+}
