--- a/productos.css
+++ b/productos.css
@@ -174,5 +174,9 @@ article.taller p {
 }
 
 .animacion-turbo2 {
-   
+    width: 400px;
+    height: 300px;
+    background-size: cover;
+    background-position: center;
+    animation: girarTurbo2 4s infinite;
 }
