Creando Keyframes girarTurbo2 vacía como base

--- a/productos.css
+++ b/productos.css
@@ -180,3 +180,7 @@ article.taller p {
     background-position: center;
     animation: girarTurbo2 4s infinite;
 }
+
+@keyframes girarTurbo2 {
+  
+}
