Creando clase .animacion-turbo3 vacía como base

--- a/productos.css
+++ b/productos.css
@@ -189,3 +189,7 @@ article.taller p {
     80%  { background-image: url('imagenesturbo/2Turbocompresoroxidado/turboo5-removebg-preview.png'); }
     100% { background-image: url('imagenesturbo/2Turbocompresoroxidado/turboo1-removebg-preview.png'); }
 }
+
+.animacion-turbo3 {
+    
+}
