Creando Keyframes girarTurbo3 vacía como base

--- a/productos.css
+++ b/productos.css
@@ -197,3 +197,7 @@ article.taller p {
     background-position: center;
     animation: girarTurbo3 6s infinite;
 }
+
+@keyframes girarTurbo3 {
+   
+}
