--- a/productos.css
+++ b/productos.css
@@ -207,3 +207,10 @@ article.taller p {
     83.33% { background-image: url('imagenesturbo/3Turbinadecoche/turbooo6-removebg-preview.png'); }
     100%   { background-image: url('imagenesturbo/3Turbinadecoche/turbooo1-removebg-preview.png'); }
 }
+
+#footer {
+  text-align: center;
+  padding: 30px;
+  background: #222;
+  color: #fff;
+}
