Creando clase .animaciones-container h2 vacía como base

--- a/productos.css
+++ b/productos.css
@@ -155,6 +155,10 @@ article.taller p {
     padding: 10px;
 }
 
+.animaciones-container h2 {
+    
+}
+
 .animacion-turbo1 {
     width: 400px;
     height: 300px;
