Creando clase .animaciones-fila vacía como base

--- a/productos.css
+++ b/productos.css
@@ -163,6 +163,10 @@ article.taller p {
     text-align: left;       /* Alinea el título a la izquierda */
 }
 
+.animaciones-fila {
+  
+}
+
 .animacion-turbo1 {
     width: 400px;
     height: 300px;
