--- a/serviciosstyle.css
+++ b/serviciosstyle.css
@@ -89,3 +89,11 @@ section h2 {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+#servicios ul {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+  list-style: none;
+  padding: 0;
+}
+
