--- a/serviciosstyle.css
+++ b/serviciosstyle.css
@@ -98,7 +98,7 @@ section h2 {
 }
 
 #servicios li {
-  background: #fafafa;
+  background: white;
   border: 1px solid #ddd;
   padding: 20px;
   text-align: center;
