--- a/serviciosstyle.css
+++ b/serviciosstyle.css
@@ -99,7 +99,7 @@ section h2 {
 
 #servicios li {
   background: white;
-  border: 1px solid #ddd;
+  border: 1px solid white;
   padding: 20px;
   text-align: center;
   border-radius: 6px;
