Finalizando diseño en etiqueta body

--- a/contactos.css
+++ b/contactos.css
@@ -1,3 +1,22 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f8f8f8;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 .grid-container{
     display: flex;
     justify-content: center;
