--- a/contactos.css
+++ b/contactos.css
@@ -47,9 +47,13 @@ header .logo{
   border-radius: 5px;
 }
 .intro {
-  ;
+  text-align: center;
+  padding: 50px 20px 30px;
+  background-color: #f0f0f0
 }
-
+.intro h1 {
+  
+}
 
 
 
