--- a/contactos.css
+++ b/contactos.css
@@ -36,14 +36,14 @@ body {
 }
 .menu a {
   text-decoration: none;
-  color: #ff5500;
+  color: red;
   font-weight: bold;
   padding: 8px 12px;
   transition: background-color 0.3s ease, color 0.3s ease;
 }
 .menu a:hover {
-  background-color: #9900ff;
-  color: #fff;
+  background-color: #d20000;
+  color: #ffffff;
   border-radius: 5px;
 }
 .intro {
@@ -55,14 +55,14 @@ body {
   margin-top: 40px;
   text-align: center;
   font-size: 3.5rem;
-  color: #222;
+  color: rgb(0, 0, 0);
   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-style: italic;
   font-weight: 100;
 }
 .intro p {
   font-size: 18px;
-  color: #333;
+  color: black
 }
 
 
