--- a/css/contactos.css
+++ b/css/contactos.css
@@ -5,10 +5,10 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #121212; /* Fondo oscuro */
+    color: #eaeaea; /* Texto claro */
+    line-height: 1.6;
 }
 
 .header {
