--- a/css/contactos.css
+++ b/css/contactos.css
@@ -23,6 +23,10 @@ header {
     box-shadow: 0 2px 10px rgba(0,0,0,0.5);
 }
 
+header img {
+    height: 60px;
+    width: auto;
+}
 
 .menu {
   position: absolute;
