Modificando estilo de css

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -41,7 +41,13 @@ header img {
     gap: 25px;
 }
 
-
+#navegacion a {
+    text-decoration: none;
+    color: #eaeaea;
+    font-weight: bold;
+    font-size: 16px;
+    transition: color 0.3s;
+}
 .menu a {
   text-decoration: none;
   color: red;
