--- a/css/contactos.css
+++ b/css/contactos.css
@@ -49,6 +49,11 @@ header img {
     transition: color 0.3s;
 }
 
+#navegacion a:hover,
+#navegacion a.activo {
+    color: #7a0000;
+}
+
 .intro {
   text-align: center;
   padding: 50px 20px 30px;
