--- a/css/contactos.css
+++ b/css/contactos.css
@@ -55,14 +55,27 @@ header img {
 }
 
 
-.intro h1 {
-  margin-top: 40px;
-  text-align: center;
-  font-size: 3.5rem;
-  color: rgb(0, 0, 0);
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-style: italic;
-  font-weight: 100;
+h1, h2 {
+    color: #fff;
+    margin-bottom: 15px;
+    align-items: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-style: italic;
+    text-align: center;
+}
+
+h1 {
+    font-size: 2.5rem;
+    margin-bottom: 20px;
+    align-items: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-style: italic;
+    text-align: center;
+}
+
+h2 {
+    font-size: 1.8rem;
+    margin-top: 40px;
 }
 .intro p {
   font-size: 18px;
