--- a/css/contactos.css
+++ b/css/contactos.css
@@ -89,6 +89,15 @@ section {
     box-shadow: 0 4px 12px rgba(0,0,0,0.3);
 }
 
+#servicios li {
+    background: #2a2a2a;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    text-align: center;
+    font-weight: bold;
+    transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s;
+}
 
  .contacto {
     text-align: center;
