Agregando etiquetas section

--- a/css/contactos.css
+++ b/css/contactos.css
@@ -125,6 +125,15 @@ section {
     background:#343434;
 }
 
+section ul {
+    padding-left: 20px;
+    margin-top: 10px;
+}
+
+section li {
+    margin-bottom: 8px;
+}
+
   footer {
     background-color: black;
     color: white;
