--- a/css/contactos.css
+++ b/css/contactos.css
@@ -134,7 +134,23 @@ section li {
     margin-bottom: 8px;
 }
 
-  
+  #footer {
+    text-align: center;
+    background: #1e1e1e;
+    padding: 20px;
+    font-size: 14px;
+    color: #bbb;
+    margin-top: 40px;
+}
+
+#footer a {
+    color: #d1273b;
+    text-decoration: none;
+}
+
+#footer a:hover {
+    text-decoration: underline;
+}
   
 
 
