--- a/css/productos.css
+++ b/css/productos.css
@@ -192,7 +192,7 @@ article.taller p {
     background-image: url('imagenesturbo/1TurbocompresorGarrett/turbo1-removebg-preview.png');
 }
 .animacion-turbo1:hover {
-    
+    animation: girarTurbo1 4s infinite;
 }
 
 @keyframes girarTurbo1 {
