--- a/css/productos.css
+++ b/css/productos.css
@@ -209,7 +209,7 @@ article.taller p {
     height: 300px;
     background-size: cover;
     background-position: center;
-    animation: girarTurbo2 4s infinite;
+    background-image: url('imagenesturbo/2Turbocompresoroxidado/turboo1-removebg-preview.png');;
 }
 
 @keyframes girarTurbo2 {
