--- a/css/productos.css
+++ b/css/productos.css
@@ -230,7 +230,7 @@ article.taller p {
     height: 300px;
     background-size: cover;
     background-position: center;
-    animation: girarTurbo3 6s infinite;
+    background-image: url('imagenesturbo/3Turbinadecoche/turbooo1-removebg-preview.png');;
 }
 
 @keyframes girarTurbo3 {
