--- a/css/productos.css
+++ b/css/productos.css
@@ -233,6 +233,10 @@ article.taller p {
     background-image: url('imagenesturbo/3Turbinadecoche/turbooo1-removebg-preview.png');;
 }
 
+.animacion-turbo3:hover {
+    
+}
+
 @keyframes girarTurbo3 {
     0%     { background-image: url('imagenesturbo/3Turbinadecoche/turbooo1-removebg-preview.png'); }
     16.67% { background-image: url('imagenesturbo/3Turbinadecoche/turbooo2-removebg-preview.png'); }
