Agregando margin a article.talller p

--- a/css/productos.css
+++ b/css/productos.css
@@ -118,6 +118,7 @@ article.taller p {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   color: #111;
   font-size: 0.95rem;
+  margin: 0;
 }
 
 .turbos {
