--- a/css/contactos.css
+++ b/css/contactos.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #121212;
+  background-color: black;
 }
 
 .header {
@@ -56,7 +56,7 @@ body {
 }
 
 .menu a:hover {
-  background-color: #121212;
+  background-color: black;
   color: #ff0000;
   border-radius: 5px;
 }
@@ -64,18 +64,22 @@ body {
 .intro {
   text-align: center;
   padding: 50px 20px 30px;
-  background-color: #121212;
+  background-color: black;
 }
 
 .intro h1 {
-  font-size: 36px;
-  color: #ffffff;
-  margin-bottom: 10px;
+  margin-top: 40px;
+  text-align: center;
+  font-size: 3.5rem;
+  color: white;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-style: italic;
+  font-weight: 100;
 }
-
 .intro p {
-  font-size: 30px;
-  color: #ffffff;
+  font-size: 18px;
+  color: white;
+  text-align: center;
 }
 
 .grid-container {
@@ -84,14 +88,14 @@ body {
   gap: 30px;
   padding: 40px 20px;
   flex-wrap: wrap;
-  background-color: #121212;
+  background-color: black;
 }
 
 .contacto {
   text-align: center;
   padding: 15px;
   max-width: 220px;
-  background-color: #121212; 
+  background-color: black; 
   border-radius: 10px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
@@ -140,7 +144,7 @@ body {
 #footer {
   text-align: center;
   padding: 30px;
-  background: #222;
+  background: #1e1e1e;
   color: #fff;
 }
 
