--- a/css/contactos.css
+++ b/css/contactos.css
@@ -111,7 +111,7 @@ body {
 
 .contacto img {
   display: block;
-  margin: 0 auto 10px;
+  margin: 26px auto 10px;
   max-width: 60px;
   border-radius: 8px;
 }
