--- a/css/contactos.css
+++ b/css/contactos.css
@@ -103,7 +103,10 @@ body {
   color: #ff0000c0;
 }
 .contacto h3 {
-  
+  color: #fff;
+  margin-bottom: 15px;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .contacto img {
