--- a/css/contactos.css
+++ b/css/contactos.css
@@ -115,7 +115,7 @@ body {
   display: block;
   margin: 20px auto;
   max-width: 80px;
-  borde
+  transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
 .boton-le {
