--- a/css/contactos.css
+++ b/css/contactos.css
@@ -101,19 +101,13 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
-.contacto a{
-  color: #ffffff;
-  text-decoration: none;
-  font-weight: bold;
-  text-decoration: underline;
-}
+
 .contacto h3 {
   color: #fff;
   margin-bottom: 15px;
   font-size: 16px;
   font-weight: bold;
 }
-
 .contacto img {
   display: block;
   margin: 20px auto;
@@ -121,15 +115,27 @@ body {
   transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
+
 .contacto img:hover{
   transform: scale(1.1);
   opacity: 0.9;
+}
+.contacto a{
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: bold;
+ 
+}
+.contacto a:hover {
+  text-decoration: underline;
 }
 .mapa iframe {
   display: block;
   width: 100%;
   height: 400px;
   border: none;
+  width: 100%;
+  margin-top: 20px;
 }
 
 #footer {
@@ -173,18 +179,23 @@ body {
 .resaltar {
   transition: transform 0.3s ease;
 }
+
+
+
 .mostrar {
   opacity: 0;
   transition: opacity 1s ease-in-out;
 }
+
 .mostrar.visible {
   opacity: 1;
 }
+
 .animar {
   transition: background-color 0.4s ease, transform 0.4s ease;
 }
+
 .animar:hover {
   background-color: var(--brand);
   transform: translateY(-4px);
 }
- 
