--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -6,6 +6,8 @@
        --accent:#7a0000;
     --accent-2:#7a0000;
       --glass-rgba: rgba(255,255,255,0.03);
+    --card-shadow: 0 6px 20px rgba(0,0,0,0.6);
+    
 }
 body {
   font-family: Arial, sans-serif;
