--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -12,6 +12,7 @@
     --max-width: 1100px;
     --transition-fast: 180ms;
        --transition-med: 340ms;
+    --transition-slow: 600ms;
 
 }
 body {
