--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -20,10 +20,8 @@
 
 * { margin:0; padding:0; box-sizing:border-box; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; }
 html, body {
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-  color: #000000;
-  background: #f4f4f4;
+  height:100%;
+  
 }
 
 header {
