--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -22,6 +22,7 @@
 html, body {
   height:100%;
   background: linear-gradient(180deg, var(--bg) 0%, #0b0b0b 60%);
+  color:var(--text);
 }
 
 header {
