--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -25,6 +25,7 @@ html, body {
   color:var(--text);
   font-family: "Inter", "Segoe UI", Arial, Helvetica, sans-serif;
   line-height:1.6;
+  -webkit-font-smoothing:antialiased;
 }
 
 header {
