--- a/css/contactos.css
+++ b/css/contactos.css
@@ -156,6 +156,18 @@ body {
 }
 /*añadi aca tu parte */
 .boton-le {
+  position: relative;
+  display: inline-block;
+  padding: 12px 25px;
+  background: #111;
+  color: white;
+  border-radius: 10px;
+  text-decoration: none;
+  font-weight: bold;
+  overflow: hidden;
+  cursor: pointer;
+  z-index: 1;
+  transition: color 0.3s;
 
 .boton-le {
   background-color: #00000000;
