--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -36,9 +36,8 @@ main{
 
 header {
     display:flex;
-    
     align-items:center;
-
+    justify-content:space-between;
 }
 
 header .galeria\logo.png {
