--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -38,6 +38,8 @@ header {
     display:flex;
     align-items:center;
     justify-content:space-between;
+    
+    gap:20px;
 }
 
 header .galeria\logo.png {
