--- a/css/serviciosstyle.css
+++ b/css/serviciosstyle.css
@@ -38,8 +38,8 @@ header {
     display:flex;
     align-items:center;
     justify-content:space-between;
-    
     gap:20px;
+    backdrop-filter: blur(6px) saturate(1.05);
 }
 
 header .galeria\logo.png {
